--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/hellmark.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Matchup</title>
+    <title>Hellmark</title>
   </head>
   <body class="bg-primaryBlue">
     <div id="root"></div>
