--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,6 @@
   </head>
   <body class="bg-primaryBlue">
     <div id="root"></div>
-
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
